yiltc-go-backup/testsuite/negative/tuple_destruct_arity.yilt
// Negative test: tuple destructuring with wrong arity should produce warning
fn main()
    let t = (1, 2, 3)
    let (a, b) = t
    print(a)
    print(b)
